deployments/service-d/service-d-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-d-deployment
  namespace: istio-meshlab
  labels:
    app: service-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-d
  template:
    metadata:
      labels:
        app: service-d
    spec:
      containers:
        - name: service-d
          image: quarkus-istio-service:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
